--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost/CoachMe-Project
 SESS_SECRET=mysecretword
+MAIL_USERNAME= tak.yoojeong@gmail.com
+MAIL_PASSWORD= yoojeong56
