--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.7.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
